Closed Bug 630588 Opened 13 years ago Closed 13 years ago

nsGlobalWindow.cpp:8399: warning: comparison between signed and unsigned integer expressions

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b12

People

(Reporter: dholbert, Assigned: dholbert)

References

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

> dom/base/nsGlobalWindow.cpp: In member function 'virtual nsresult nsGlobalWindow::FireDelayedDOMEvents()':
> dom/base/nsGlobalWindow.cpp:8399: warning: comparison between signed and unsigned integer expressions

The line of code is:
> 8399   for (PRUint32 i = 0; i < mPendingStorageEvents.Count(); ++i) {

mPendingStorageEvents is a nsCOMArray, and nsCOMArray::Count returns a *signed* integer.  So |i| should be signed, too.
Attached patch fixSplinter Review
Requesting r+a.  Justification: trivial patch, to fix a recently-introduced* build warning.

* ~2 weeks ago, in http://hg.mozilla.org/mozilla-central/rev/57f3f4e9935f
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #508815 - Flags: review?(jst)
Attachment #508815 - Flags: approval2.0?
Attachment #508815 - Flags: review?(jst)
Attachment #508815 - Flags: review+
Attachment #508815 - Flags: approval2.0?
Attachment #508815 - Flags: approval2.0+
Landed: http://hg.mozilla.org/mozilla-central/rev/8dd5c5f90bf3
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b12
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: