Bug 630588: use PRInt32 as iterator variable in nsGlobalWindow::FireDelayedDOMEvents to fix build warning. r=jst a=jst